apps/openwebui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "openwebui.lan.tapslab.com"
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "openwebui.lan.tapslab.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openwebui
      port: 80
